main/bin/main.14981.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/home/leifu/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
In file included from /home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:1:
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/models.h:43:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:90:44: error: read-only variable is not assignable
                        Hosts[i3].infector = ci; //// assign person ci as infector of person i3
                        ~~~~~~~~~~~~~~~~~~ ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:97:80: error: no member named 'infect_type' in 'struct Person'
                        short int infect_type = 1 + INFECT_TYPE_MASK * (1 + si.infect_type / INFECT_TYPE_MASK);
                                                                            ~~ ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:98:76: error: expected expression
                        StateT[index].inf_queue[StateT[index].current++] = {ci, i3, infect_type};
                                                                           ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
